# NoiseMachine-PanBot

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/app_PanBot/: CMakeLists.txt  MyLookAndFeel.cpp  PluginEditor.cpp  PluginProcessor.cpp
src/app_PanBot/app_Graphics/: CMakeLists.txt  MainComponent.cpp
src/app_PanBot/app_Graphics/include/: MainComponent.h
src/app_PanBot/app_Graphics/lib_SelectorPanel/: CMakeLists.txt  SelectorPanel.cpp
src/app_PanBot/app_Graphics/lib_SelectorPanel/include/: SelectorPanel.h
src/app_PanBot/include/: PluginEditor.h  PluginProcessor.h
src/app_PannerPlugin/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
src/app_PannerPlugin/app_Graphics/include/: MainComponent.h
src/app_PannerPlugin/app_Graphics/lib_PanBotLookAndFeel/: CMakeLists.txt  NoMachLookAndFeel.cpp  PanBotLookAndFeel.cpp
src/app_PannerPlugin/app_Graphics/lib_PanBotLookAndFeel/include/: NoMachLookAndFeel.h
src/app_PannerPlugin/app_Graphics/lib_PanBotLookAndFeel/include/lib_PanBotLookAndFeel/: PanBotLookAndFeel.h
src/app_PannerPlugin/include/: MyLookAndFeel.h  PluginEditor.h  PluginProcessor.h
src/lib_Lfo/: CMakeLists.txt
src/lib_Lfo/include/: Lfo.h
src/lib_Lfo/test/: testLfo.cpp
src/lib_PanBot/: CMakeLists.txt  PanBot.cpp
src/lib_PanBot/include/: PanBot.h
src/lib_PanBot/lib_Lfo/: Lfo.cpp
src/lib_PanBot/lib_Wavetable/: Wavetable.cpp
src/lib_PanBot/lib_Wavetable/include/: Wavetable.h
src/lib_PanBot/test/: testPanBot.cpp
src/lib_PanBotEngine/: CMakeLists.txt  PanBotEngine.cpp
src/lib_PanBotEngine/include/: PanBotEngine.h
src/lib_PanBotEngine/test/: testPanBotEngine.cpp
src/lib_PanBotLookAndFeel/: CMakeLists.txt  PanBotLookAndFeel.cpp
src/lib_PanBotLookAndFeel/include/: PanBotLookAndFeel.h
src/lib_PanBotLookAndFeel/lib_SelectorPanel/: CMakeLists.txt
src/lib_PanBotLookAndFeel/lib_SelectorPanel/include/: SelectorPanel.h
src/lib_Panner/: CMakeLists.txt  Panner.cpp
src/lib_Panner/include/: Panner.h
src/lib_Panner/test/: testPanner.cpp
src/lib_Wavetable/: CMakeLists.txt
src/lib_Wavetable/test/: testWavetable.cpp
test/: CMakeLists.txt
test/app_GraphicsTests/: CMakeLists.txt  Main.cpp  MainComponent.cpp
test/app_GraphicsTests/include/: MainComponent.h
test/app_UnitTests/: CMakeLists.txt
test/app_UnitTests/include/: DataFileIO.h  GTestUtil.h
test/googletest/: CMakeLists.txt
test/include/: GTestUtil.h
